--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -519,6 +519,9 @@ form > *:last-child {
 /*#########*/
 /* Hero */
 /*#########*/
+/*#########*/
+/* Hero */
+/*#########*/
 
 .hero-img {
   height: 100%;
